Bug 1752662 - Use enum class TeeBranch instead of boolean/integer r=evilpie

Differential Revision: https://phabricator.services.mozilla.com/D138137